# back_proj_one

back_django_insta/: pyproject.toml
back_django_insta/config/: db.sqlite3
back_django_insta/config/commons/: models.py
back_django_insta/config/config/: settings.py  urls.py
back_django_insta/config/feeds/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
back_django_insta/config/feeds/migrations/: 0001_initial.py  0002_feed_user.py  0002_initial.py  0003_alter_feed_img_alter_feed_like_alter_feed_user.py
back_django_insta/config/feeds/static/: style.css
back_django_insta/config/feeds/templates/: feeds.html
back_django_insta/config/feeds/templates/feeds/: feed_list.html
back_django_insta/config/reviews/: admin.py  models.py  serializers.py  urls.py  views.py
back_django_insta/config/reviews/migrations/: 0001_initial.py  0002_initial.py
back_django_insta/config/reviews/templates/: base.html
back_django_insta/config/reviews/templates/reviews/: review_list.html
back_django_insta/config/users/: admin.py  models.py  serializers.py  urls.py  views.py
back_django_insta/config/users/migrations/: 0001_initial.py  0002_alter_user_is_business.py
back_django_insta/config/users/templates/users/: user_list.html
